crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@let__nested_value.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/let/nested_value.panda
---
Ok(
    Int(
        Int {
            n: 1,
        },
    ),
)
